Design: 회원가입 페이지 퍼블리싱

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
       <style>
+          @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+
           html, body {
               padding: 0;
               margin: 0;
               width: 100%;
               height: 100%;
+              font-family: 'Noto Sans KR', sans-serif;
           }
       </style>
   </head>
