Design: 디자인 세부 수정, 필요한 리소스 추가

--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
       <style>
-          @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+          @font-face {
+              font-family: 'Pretendard-Regular';
+              src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+              font-weight: 400;
+              font-style: normal;
+          }
 
           html, body {
               padding: 0;
               margin: 0;
               width: 100%;
               height: 100%;
-              font-family: 'Noto Sans KR', sans-serif;
+              font-family: 'Pretendard-Regular', sans-serif;
           }
       </style>
   </head>
