--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
       <style>
-          @font-face {
-              font-family: 'Pretendard-Regular';
-              src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-              font-weight: 400;
-              font-style: normal;
+          @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+
+          html, body {
+              padding: 0;
+              margin: 0;
+              width: 100%;
+              height: 100%;
+              font-family: 'Noto Sans KR', sans-serif;
           }
 
           html, body {
@@ -26,7 +29,7 @@
               margin: 0;
               width: 100%;
               height: 100%;
-              font-family: 'Pretendard-Regular', sans-serif;
+              font-family: 'Noto Sans KR', sans-serif;
           }
       </style>
   </head>
