--- a/index.html
+++ b/index.html
@@ -22,14 +22,7 @@
               width: 100%;
               height: 100%;
               font-family: 'Noto Sans KR', sans-serif;
-          }
-
-          html, body {
-              padding: 0;
-              margin: 0;
-              width: 100%;
-              height: 100%;
-              font-family: 'Noto Sans KR', sans-serif;
+              background-color: #E4E7EC;
           }
       </style>
   </head>
