Feat: 주소 검색 Component 추가

--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
               background-color: #E4E7EC;
           }
       </style>
+      <script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6">
+      </script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGsBxFRqIwj1Gb1IqIedr6o1RekambpNM&libraries=places"></script>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+  <div id="app">
+  </div>
+  <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
